<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorseting"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtbackapp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_botton_10dp"
            android:layout_marginLeft="@dimen/margin_left_10dp"
            android:layout_marginTop="@dimen/margin_top_10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/textBachApp"
            android:textColor="@color/colorbackApp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"

            />

        <TextView
            android:id="@+id/txttutorial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_botton_10dp"
            android:layout_marginRight="@dimen/margin_right_10dp"
            android:layout_marginTop="@dimen/margin_top_10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/textTutorial"
            android:textColor="@color/colorbackApp"
            android:textSize="@dimen/text_size_18dp" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:fillViewport="true"
        android:overScrollMode="never"

        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtvolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:text="Boost input volume:"
                android:textColor="#EEEEEE	"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.nightonke.jellytogglebutton.JellyToggleButton
                android:id="@+id/tgvolum"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/margin_left_130dp"
                android:layout_marginRight="@dimen/margin_right_130dp"
                android:layout_marginTop="@dimen/margin_top_30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtvolume" />








            <TextView
                android:id="@+id/txtnotesection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_8dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtnotesection"
                android:textColor="#EEEEEE	"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tgvolum" />

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmentedSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginRight="@dimen/margin_right_8dp"
                android:layout_marginLeft="@dimen/margin_left_8dp"
                android:layout_marginTop="@dimen/margin_top_30dp"
                android:background="@drawable/custom_text_view"
                android:orientation="horizontal"
                android:weightSum="3"
                segmentedgroup:layout_constraintEnd_toEndOf="parent"
                segmentedgroup:layout_constraintStart_toStartOf="parent"
                segmentedgroup:layout_constraintTop_toBottomOf="@+id/txtnotesection"
                segmentedgroup:sc_border_width="1dp"
                segmentedgroup:sc_checked_text_color="@color/black"
                segmentedgroup:sc_corner_radius="5dp">

                <RadioButton
                    android:id="@+id/rdbautomatic"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textAutomatic"
                    android:textSize="@dimen/text_size_12dp" />

                <RadioButton
                    android:id="@+id/rdbpalette"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textPalete"
                    android:textSize="@dimen/text_size_12dp" />

                <RadioButton
                    android:id="@+id/rdbchromatic"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/textChomatic"
                    android:textSize="@dimen/text_size_12dp" />
            </info.hoang8f.android.segmented.SegmentedGroup>

            <TextView
                android:id="@+id/txtnotePalette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_8dp"

                android:layout_marginTop="@dimen/margin_top_30dp"
                android:background="@drawable/custom_text_preset"
                android:textColor="#EEEEEE	"
                android:textSize="@dimen/text_size_18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/segmentedSelection" />

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmentedPalete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/margin_left_2dp"
                android:layout_marginRight="@dimen/margin_right_2dp"

                android:layout_marginTop="@dimen/margin_top_30dp"
                android:orientation="horizontal"
                android:weightSum="6"
                segmentedgroup:layout_constraintEnd_toEndOf="parent"
                segmentedgroup:layout_constraintStart_toStartOf="parent"
                segmentedgroup:layout_constraintTop_toBottomOf="@+id/txtnotePalette"
                segmentedgroup:sc_border_width="1dp"
                segmentedgroup:sc_checked_text_color="@color/black"
                segmentedgroup:sc_corner_radius="5dp">

                <RadioButton
                    android:id="@+id/rdbPalete1"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_12dp" />

                <RadioButton
                    android:id="@+id/rdbPalete2"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_12dp" />

                <RadioButton
                    android:id="@+id/rdbPalete3"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_12dp" />

                <RadioButton
                    android:id="@+id/rdbPalete4"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_12dp" />

                <RadioButton
                    android:id="@+id/rdbPalete5"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_12dp" />

                <RadioButton
                    android:id="@+id/rdbPalete6"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_12dp" />
            </info.hoang8f.android.segmented.SegmentedGroup>

            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmentedInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_8dp"
                android:layout_marginRight="@dimen/margin_left_8dp"
                android:layout_marginTop="@dimen/margin_top_30dp"
                android:orientation="horizontal"
                android:weightSum="3"
                segmentedgroup:layout_constraintEnd_toEndOf="parent"
                segmentedgroup:layout_constraintStart_toStartOf="parent"
                segmentedgroup:layout_constraintTop_toBottomOf="@+id/txtnotePalette"
                segmentedgroup:sc_border_width="1dp"
                segmentedgroup:sc_checked_text_color="@color/black"
                segmentedgroup:sc_corner_radius="5dp">

                <RadioButton
                    android:id="@+id/rdbOctaves"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textOctive"
                    android:textSize="@dimen/text_size_12dp"  />

                <RadioButton
                    android:id="@+id/rdbFourths"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textFourths"
                    android:textSize="@dimen/text_size_12dp"  />

                <RadioButton
                    android:id="@+id/rdbFifths"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textFifths"
                    android:textSize="@dimen/text_size_12dp"  />
            </info.hoang8f.android.segmented.SegmentedGroup>

            <NumberPicker
                android:id="@+id/numberpicker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_numberpicker"


                android:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/segmentedPalete"
                tools:ignore="MissingConstraints"></NumberPicker>


            <TextView
                android:id="@+id/txtNotePalettePreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_right_8dp"

                android:layout_marginLeft="@dimen/margin_left_8dp"
                android:layout_marginTop="@dimen/margin_top_30dp"
                android:text="@string/txtNotePalettePreset"

                android:textSize="@dimen/text_size_18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.037"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberpicker" />


            <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmentedPreset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_80dp"
                android:layout_marginRight="@dimen/margin_right_80dp"
                android:layout_marginTop="@dimen/margin_top_30dp"
                android:orientation="horizontal"


                segmentedgroup:layout_constraintEnd_toEndOf="parent"
                segmentedgroup:layout_constraintStart_toStartOf="parent"
                segmentedgroup:layout_constraintTop_toBottomOf="@+id/txtNotePalettePreset"
                segmentedgroup:sc_border_width="1dp"
                segmentedgroup:sc_checked_text_color="@color/black"
                segmentedgroup:sc_corner_radius="10dp">

                <RadioButton
                    android:id="@+id/rdbPreset"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:textSize="12sp" />

            </info.hoang8f.android.segmented.SegmentedGroup>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>